--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "babel-plugin-import": "^1.13.0",
     "craco-less": "^1.17.0",
     "customize-cra": "^1.0.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "js-tokens": "^6.0.0",
     "jsonp": "^0.2.1",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
@@ -20,6 +23,7 @@
     "react-amap": "^1.2.8",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "store": "^2.0.12"
